Improve signal meter contrast. Fix usage of setSensorCurrentConditions().

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -550,7 +550,7 @@ input, button, select, textarea, optgroup, option { // Ignored by macOS Chrome f
 }
 
 .signal-meter {
-  fill: rgba(0, 255, 0, 0.25)
+  fill: rgba(63, 255, 63, 0.30)
 }
 
 .signal-level-1 {
